# gl_playground

./: .ignore  CMakeLists.txt  Makefile  readme.md
glad/include/glad/: gl.h
glsl/: fragment_shader.glsl  grid_fragment_shader.glsl  grid_vertex_shader.glsl  vertex_shader.glsl
include/gl_playground/: camera.h  game.h  grid.h  matrix.h  mesh.h  mesh_data.h  shaders.h  triangulate.h  uv.h  vector.h  window.h
res/glsl/: fragment_shader.glsl  grid_fragment_shader.glsl  grid_vertex_shader.glsl  vertex_shader.glsl
src/: camera.c  game.c  grid.c  main.c  matrix.c  mesh.c  mesh_data.c  shader.c  shaders.c  triangulate.c  vector.c  window.c
